--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Nyan Kat</title>
+    <title>George Michael's Finest Javascript Splendevoury!</title>
   </head>
   <body>
     <div id="app"></div>
